[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/waterfall/waterfall_background.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ui/CompassProTitle.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/EquipmentPro.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/main_menu_new.gd" type="Script" id=5]
[ext_resource path="res://ui/team_selection/team_selection_menu.tscn" type="PackedScene" id=6]

[node name="main_menu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 5 )

[node name="waterfall_background" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1.0
margin_right = 1.0
rect_scale = Vector2( 2, 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 2 )
text = "Shotcaller"
align = 1
valign = 1

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 302.0
margin_right = 600.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = -2.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 240.0
margin_top = 238.0
margin_right = 360.0
margin_bottom = 362.0

[node name="quick_start_button" parent="CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_right = 120.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 4 )
text = "Quick start"

[node name="new_game_button" parent="CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 32.0
margin_right = 120.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 4 )

[node name="options_button" parent="CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 64.0
margin_right = 120.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 4 )
text = "Options"

[node name="exit_button" parent="CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 96.0
margin_right = 120.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 4 )
text = "Exit"

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -71.0
margin_top = -14.0
text = "version 0.4"
align = 2

[node name="team_selection_menu" parent="." instance=ExtResource( 6 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.0
margin_top = -220.0
margin_right = 230.0
margin_bottom = 220.0
